version/0.11/_sources/examples/preprocessor/doc_preprocess_fourchamber.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\preprocessor\doc_preprocess_fourchamber.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_preprocessor_doc_preprocess_fourchamber.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_preprocessor_doc_preprocess_fourchamber.py:


Create a four chamber heart model
---------------------------------
This example shows you how to process a case file from the Strocchi2020 database
and process that into a simulation-ready full heart model.

.. GENERATED FROM PYTHON SOURCE LINES 32-38

Example setup
-------------
Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory and generated model

.. GENERATED FROM PYTHON SOURCE LINES 38-69

.. code-block:: Python



    import json
    import os
    from pathlib import Path

    import ansys.heart.core.models as models
    from ansys.heart.core.pre.database_utils import get_compatible_input

    # Use Fluent 24.1 for meshing.
    import ansys.heart.core.pre.mesher as mesher
    from ansys.heart.core.utils.download import download_case_from_zenodo, unpack_case

    mesher._fluent_version = "24.1"

    # Download and unpack the case in a dedicated folder, in this case the home directory.
    download_folder = Path.home() / "pyansys-heart" / "downloads"
    tar_file = download_case_from_zenodo("Strocchi2020", 1, download_folder, overwrite=False)
    case_file = unpack_case(tar_file)

    # specify a working directory. Here we use the same directory as the case file.
    workdir = os.path.join(os.path.dirname(case_file), "FourChamber")

    if not os.path.isdir(workdir):
        os.makedirs(workdir)

    # specify paths to the model, input and part definitions.
    path_to_model = os.path.join(workdir, "heart_model.vtu")
    path_to_input = os.path.join(workdir, "input_model.vtp")
    path_to_part_definitions = os.path.join(workdir, "part_definitions.json")


.. GENERATED FROM PYTHON SOURCE LINES 73-82

.. note::
   You may need to (manually) download the .case or .vtk files from the Strocchi2020
   and Rodero2021 databases first. See:

   - https://zenodo.org/records/3890034
   - https://zenodo.org/records/4590294

   Alternatively you can make use of the download
   module instead. See the download module.

.. GENERATED FROM PYTHON SOURCE LINES 84-86

Convert the .vtk file into compatible input
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 86-96

.. code-block:: Python

    input_geom, part_definitions = get_compatible_input(
        case_file, model_type="FourChamber", database="Strocchi2020"
    )

    # Note that the input model and part definitions can be used for later use.
    # save input geometry and part definitions:
    input_geom.save(path_to_input)
    with open(path_to_part_definitions, "w") as f:
        json.dump(part_definitions, f, indent=True)


.. GENERATED FROM PYTHON SOURCE LINES 97-100

Create a heart model
~~~~~~~~~~~~~~~~~~~~
Initialize the desired heart model by giving a working directory.

.. GENERATED FROM PYTHON SOURCE LINES 100-126

.. code-block:: Python


    # initialize a four chamber heart model
    model = models.FourChamber(working_directory=workdir)

    # load input model generated in an earlier step.
    model.load_input(input_geom, part_definitions, "surface-id")

    # mesh the volume of all structural parts.
    model.mesh_volume(use_wrapper=True, global_mesh_size=1.5)

    # update the model and extract the required (anatomical) features
    model._update_parts()

    # dump the model to disk
    model.save_model(path_to_model)

    # Optionally save the simulation mesh as a vtk object for "offline" inspection
    model.mesh.save(os.path.join(model.workdir, "simulation-mesh.vtu"))
    model.save_model(os.path.join(model.workdir, "heart_model.vtu"))

    # print some info about the processed model.
    print(model)

    # print part names
    print(model.part_names)


.. GENERATED FROM PYTHON SOURCE LINES 127-131

Visualize results
~~~~~~~~~~~~~~~~~
You can visualize and inspect the components of the model by accessing
various properties/attributes and invoke methods.

.. GENERATED FROM PYTHON SOURCE LINES 131-137

.. code-block:: Python

    print(f"Volume of LV cavity: {model.left_ventricle.cavity.volume} mm^3")
    print(f"Volume of LV cavity: {model.left_atrium.cavity.volume} mm^3")

    # plot the remeshed model
    model.plot_mesh(show_edges=False)


.. GENERATED FROM PYTHON SOURCE LINES 138-141

.. image:: /_static/images/four_chamber_mesh.png
  :width: 400pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 141-145

.. code-block:: Python


    # plot the endocardial surface of the left ventricle.
    model.left_ventricle.endocardium.plot(show_edges=True, color="r")


.. GENERATED FROM PYTHON SOURCE LINES 146-149

.. image:: /_static/images/four_chamber_lv_endocardium.png
  :width: 400pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 149-158

.. code-block:: Python


    # loop over all cavities and plot these in a single window.
    import pyvista as pv

    cavities = pv.PolyData()
    for c in model.cavities:
        cavities += c.surface
    cavities.plot(show_edges=True)


.. GENERATED FROM PYTHON SOURCE LINES 159-162

.. image:: /_static/images/four_chamber_cavities.png
  :width: 400pt
  :align: center


.. _sphx_glr_download_examples_preprocessor_doc_preprocess_fourchamber.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: doc_preprocess_fourchamber.ipynb <doc_preprocess_fourchamber.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: doc_preprocess_fourchamber.py <doc_preprocess_fourchamber.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: doc_preprocess_fourchamber.zip <doc_preprocess_fourchamber.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
